# concentrate

./: .gitignore  README.md  build_start.sh  compile_proyect  concentrate  concentrate.c  global.h  meson.build  user_input.c
args_interpret/: args.c  privateargs.h  public_args.h
include/: args.h  global.h  printers.h  translate.h  user_input.h
po/: POTFILES  concentrate.pot  en.po  es.po  meson.build
src/: concentrate.c  meson.build
src/args_interpret/: args.c  meson.build  private_args.h
src/printers/: meson.build  printers.c
src/user_input/: meson.build  user_input.c
textfiles/: clap  defaultblock  hola  settings
user_input/: public_user_input.h  user_input.c
